feat(session): 优化会话管理和Cookie自动续期机制
- 实现Session和Cookie的自动续期功能
  - 添加SessionCookieInterceptor用于更新Cookie过期时间
  - 在WebMvcConfig中注册拦截器
  - 统一Session和Cookie的过期时间为1800秒

- 优化配置
  - 修改Redis Session配置为immediate刷新模式
  - 添加定时清理过期会话的cron任务
  - 配置Cookie的安全属性(HttpOnly, SameSite等)

- 时区处理
  - 添加全局Jackson时区配置(Asia/Shanghai)
  - 统一日期时间格式化模式

技术细节：
- spring.session.timeout: 1800s
- flush-mode: immediate
- save-mode: always